Fixing comment spacing on larger screens.

--- a/sass/site/primary/_comments.scss
+++ b/sass/site/primary/_comments.scss
@@ -137,7 +137,7 @@
 	}
 
 	.comment-body {
-		margin: 0 $size__horizontal-padding;
+		margin: 0;
 	}
 }
 
@@ -155,7 +155,7 @@
 
 		.avatar {
 			position: absolute;
-			left: -4rem;
+			left: -6rem;
 			top: 2rem
 		}
 	}
